unpackaged/main/default/objects/SFDC_Referring_Employee__c/SFDC_Referring_Employee__c.object-meta.xml
<CustomObject>
    <description>Company employee who has referred an applicant</description>
    <label>Referring Employee</label>
    <nameField>
        <label>Referring Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referring Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>