unpackaged/main/default/objects/SFDC_Referring_Employee__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee_ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>