unpackaged/main/default/objects/SFDC_Referring_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Email__c</columns>
    <columns>Employee_Phone_Number__c</columns>
    <columns>Employee_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>